@@ -1,3 +1,7 @@
+Tue Dec 18 21:18:11 CET 2012
+	Given both 'chunked' encoding and 'content-length',
+	ignore the 'content-length' header as per RFC. -ES
+
 Thu Dec  6 10:14:44 CET 2012
 	Force adding "Connection: close" header to response if
 	client asked for connection to be closed (so far, we
